# HollowStudios

./: .gitignore  CMakeLists.txt  readme.md
src/: main.cpp
src/libs/: Viewport.cpp  Viewport.h
src/libs/controls/: CameraController.h
src/libs/gui/interface/: RmlUi_Backend.h  RmlUi_Backend_SDL_SDLrenderer.cpp  RmlUi_Platform_SDL.cpp  RmlUi_Platform_SDL.h  RmlUi_Renderer_SDL.cpp  RmlUi_Renderer_SDL.h
src/libs/managers/: SceneManager.h
src/libs/primitives/: Mesh.h
src/libs/utils/: MathUtils.h  loaderUtils.h  tiny_obj_loader.h
submods/: Makefile  app  app.cpp  bkapp.cpp
